fix size menu-sm, fix overflow of project sketch images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -451,7 +451,7 @@ html, body {
 
     .group-sketch-projects > div {
       width: auto;
-      margin-bottom: 30px;
+      margin-bottom: 25%;
     }
 
     #sketch-projects #image-sketch-project1,
